@@ -1,16 +1,17 @@
 <%@ Page language="c#" Codebehind="HtmlInputTextTestPage.aspx.cs" AutoEventWireup="false" Inherits="NUnitAspTestPages.HtmlTester.HtmlInputTextTestPage" %>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
-<html>
-	<head>
+<HTML>
+	<HEAD>
 		<title>HtmlInputTextTestPage</title>
 		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0">
 		<meta name="CODE_LANGUAGE" Content="C#">
 		<meta name="vs_defaultClientScript" content="JavaScript">
 		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5">
-	</head>
+	</HEAD>
 	<body>
 		<form id="HtmlInputTextTestPage" method="post" runat="server">
-			<input type="text" id="text" name="foo" />
+			<input type="text" id="text" name="foo" runat="server" />
+			<input type="text" id="textDefault" runat="server" />
 		</form>
 	</body>
-</html>
+</HTML>
