@@ -1,0 +1,17 @@
+<%@ Page language="c#" Codebehind="HtmlTextAreaTestPage.aspx.cs" AutoEventWireup="false" Inherits="NUnitAspTestPages.HtmlTester.HtmlTextAreaTestPage" %>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
+<html>
+	<head>
+		<title>HtmlTextAreaTestPage</title>
+		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0">
+		<meta name="CODE_LANGUAGE" Content="C#">
+		<meta name="vs_defaultClientScript" content="JavaScript">
+		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5">
+	</head>
+	<body>
+		<form id="HtmlTextAreaTestPage" method="post" runat="server">
+			<textarea id="textArea" runat="server"></textarea>
+			<textarea id="textAreaDefaults"></textarea>
+		</form>
+	</body>
+</html>
